force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/BMCServiceDesk__ScanDetail__c.object-meta.xml
<CustomObject>
    <label>Scan Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>