force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/fields/BMCServiceDesk__ExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ExecutionStatus__c</fullName>
    <formula>CASE(BMCServiceDesk__ExecutionStatusType__c,
&apos;_STATUS_ASSIGNPAUSED_&apos;, $Label.bmcservicedesk__statusassignmentpaused, 
&apos;_STATUS_ASSIGNWAITING_&apos;, $Label.bmcservicedesk__statusassignmentwaiting,
&apos;_STATUS_ASSIGNSENT_&apos;, $Label.bmcservicedesk__statusassignmentsent,
&apos;_STATUS_ASSIGNOK_&apos;, $Label.bmcservicedesk__statusassigned,
&apos;_STATUS_REASSIGNWAITING_&apos;, $Label.bmcservicedesk__statusreassignmentwaiting,
&apos;_STATUS_UNASSIGNEDPAUSED_&apos;, $Label.bmcservicedesk__statusunassignmentpaused,
&apos;_STATUS_UNASSIGNEDWAITING_&apos;, $Label.bmcservicedesk__statusunassignmentwaiting,
&apos;_STATUS_UNASSIGNEDSENT_&apos;, $Label.bmcservicedesk__statusunassignmentsent,
&apos;_STATUS_UNASSIGNEDOK_&apos;, $Label.bmcservicedesk__statusunassigned,
&apos;_STATUS_UPDATEPAUSED_&apos;, $Label.bmcservicedesk__statusupdatepaused,
&apos;_STATUS_UPDATEWAITING_&apos;, $Label.bmcservicedesk__statusupdatewaiting,
&apos;_STATUS_UPDATESENT_&apos;, $Label.bmcservicedesk__statusupdatesent,
&apos;_STATUS_UPDATEOK_&apos;, $Label.bmcservicedesk__statusupdated,
&apos;_STATUS_EXECUTEDOK_&apos;, $Label.bmcservicedesk__statusexecuted,
&apos;_STATUS_EXECUTEFAILED_&apos;, $Label.bmcservicedesk__statusexecutionfailed,
&apos;_STATUS_ASSIGNPLANNED_&apos;, $Label.bmcservicedesk__statusassignmentplanned,
&apos;_STATUS_UPDATEPLANNED_&apos;, $Label.bmcservicedesk__statusupdateplanned,
&apos;_STATUS_REASSIGNPLANNED_&apos;, $Label.bmcservicedesk__statusreassignmentplanned,
&apos;_STATUS_CONFIGUREFAILURE_&apos;, $Label.bmcservicedesk__statusconfigurationfailed,
&apos;_STATUS_CONFIGUREDOK_&apos;, $Label.bmcservicedesk__statusconfigurationok,
&apos;_STATUS_EXECUTESCHEDULED_&apos;, $Label.bmcservicedesk__scanstatusexecutionscheduled,
&apos;_STATUS_EXECUTING_&apos;, $Label.bmcservicedesk__statusexecuting,
&apos;_STATUS_EXECUTEPENDING_&apos;, $Label.bmcservicedesk__statusexecutionpending,
&apos;&apos;, $Label.bmcservicedesk__notconfigured,
$Label.bmcservicedesk__psatnotapplicable)</formula>
    <label>Execution Status</label>
    <type>Text</type>
</CustomField>