force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/fields/BMCServiceDesk__FKScanConfiguration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKScanConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the reference of the scan configuration associated with the scan.</description>
    <label>Scan Configuration</label>
    <referenceTo>BMCServiceDesk__ScanConfiguration__c</referenceTo>
    <relationshipLabel>Scan Configurations</relationshipLabel>
    <relationshipName>Scan_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>