force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/fields/BMCServiceDesk__FKScanner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKScanner__c</fullName>
    <description>To store the reference of the scanner device for which the scan was created.</description>
    <label>Scanner</label>
    <referenceTo>BMCServiceDesk__Scanner__c</referenceTo>
    <relationshipLabel>Scan Details</relationshipLabel>
    <relationshipName>Scan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>