force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/fields/BMCServiceDesk__ScanId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanId__c</fullName>
    <description>To store  Id of the scan.</description>
    <label>Scan Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>