force-app/main/default/objects/BMCServiceDesk__ScanDetail__c/fields/BMCServiceDesk__ScanName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanName__c</fullName>
    <description>To store the name of the scan.</description>
    <label>Scan Name</label>
    <type>TextArea</type>
</CustomField>